--- a/stream-mongodb/pom.xml
+++ b/stream-mongodb/pom.xml
@@ -15,6 +15,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<swagger-springfox.version>2.0.0-SNAPSHOT</swagger-springfox.version>
 	</properties>
 
 	<dependencies>
@@ -30,6 +31,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
+		 <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger-springfox.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger-springfox.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -48,6 +59,14 @@
 	</build>
 
 	<repositories>
+		<repository>
+            <id>jcenter-snapshots</id>
+            <name>jcenter</name>
+            <url>http://oss.jfrog.org/oss-snapshot-local</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
 		<repository>
 			<id>spring-releases</id>
 			<name>Spring Releases</name>
