--- a/stream-mongodb/pom.xml
+++ b/stream-mongodb/pom.xml
@@ -15,7 +15,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<swagger-springfox.version>2.0.0-SNAPSHOT</swagger-springfox.version>
+		<swagger-springfox.version>2.3.1</swagger-springfox.version>
 	</properties>
 
 	<dependencies>
@@ -63,9 +63,6 @@
             <id>jcenter-snapshots</id>
             <name>jcenter</name>
             <url>http://oss.jfrog.org/oss-snapshot-local</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
         </repository>
 		<repository>
 			<id>spring-releases</id>
